--- a/package.json
+++ b/package.json
@@ -232,6 +232,9 @@
     "build": "babel src --out-dir dist -x \".ts\" --ignore \"src/__tests__\"",
     "postbuild": "yarn types",
     "markdown-toc": "npx markdown-toc@1.2.0 -i README.md",
+    "ncu:major": "npx npm-check-updates@11.8.3",
+    "ncu:minor": "npx npm-check-updates@11.8.3 -t minor",
+    "ncu:patch": "npx npm-check-updates@11.8.3 -t patch",
     "prepublishOnly": "yarn build",
     "prestandard-version": "yarn build",
     "standard-version": "npx standard-version@9.3.1",
